--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,10 @@ wheels/
 
 # Virtual Environment
 venv/
-ENV/
 env/
+ENV/
+
+# Environment Variables
 .env
 
 # IDE
@@ -32,6 +34,12 @@ env/
 *.swp
 *.swo
 
-# OS
+# Logs
+*.log
+
+# Docker
+.docker/
+
+# System
 .DS_Store
 Thumbs.db 
