Update docker-compose.yml for Portainer deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     env_file:
       - .env
     environment:
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - SERVICE=api
 
   bot:
@@ -13,6 +14,9 @@ services:
     env_file:
       - .env
     environment:
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - DISCORD_TOKEN=${DISCORD_TOKEN}
+      - API_URL=http://api:4343
       - SERVICE=bot
     depends_on:
       - api 
