Initial commit: Better Lover - Tour Date Formatter

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-OPENAI_API_KEY=your_openai_api_key_here 
+# API Keys
+OPENROUTER_API_KEY=your_openrouter_key_here
+DISCORD_TOKEN=your_discord_token_here
+
+# Service Configuration
+API_URL=http://api:4343  # Use this when running in Docker
+# API_URL=http://localhost:4343  # Use this when running locally
+
