--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Environment variables
+.env
+.env.*
+
 # Python
 __pycache__/
 *.py[cod]
@@ -24,9 +28,6 @@ wheels/
 venv/
 env/
 ENV/
-
-# Environment Variables
-.env
 
 # IDE
 .idea/
